SFDCProject/src/objects/Document_Classification__c.object
<CustomObject>
    <fields>
        <fullName>Allow_To_Over_Write__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow To Over-Write</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <externalId>true</externalId>
        <label>Document Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <externalId>true</externalId>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ESignature_allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ESignature allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Welcome_Email_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Welcome Email Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Type__c</fullName>
        <label>Proposal Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Order</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Show_On_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <picklist>
            <picklistValues>
                <fullName>Proposal Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Upload</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Welcome_email_attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome email attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>EOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photo Upload</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Document Classification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Document_Name__c</columns>
        <columns>ESignature_allowed__c</columns>
        <columns>NAME</columns>
        <columns>Welcome_email_attachment__c</columns>
        <columns>Partner_Welcome_Email_Attachment__c</columns>
        <columns>Source_System__c</columns>
        <columns>Allow_To_Over_Write__c</columns>
        <columns>Proposal_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Show_On_Mobile__c</columns>
        <columns>category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Document_Classification_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>